--- a/index.html
+++ b/index.html
@@ -9,28 +9,21 @@
   <body>
     <!-- Navigate -->
     <header>
-      <nav>
-        <a href="./index.html"
-          ><img
-            src="./images/icons/logo.png"
-            alt="logo"
-            width="115"
-            height="24"
-          />
-        </a>
+      <img src="./images/icons/logo.png" alt="logo" width="115" height="24" />
 
+      <nav>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
-        <address>
-          <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel+110001111111">+11 (000) 111-11-11</a></li>
-          </ul>
-        </address>
       </nav>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
 
     <main>
@@ -41,6 +34,7 @@
       </section>
       <!-- feuters -->
       <section>
+        <h2>Options</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -84,7 +78,7 @@
               width="264"
               height="260"
             />
-            <h4>Mark Guerrero</h4>
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
@@ -94,7 +88,7 @@
               width="264"
               height="260"
             />
-            <h4>Tom Ford</h4>
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -104,7 +98,7 @@
               width="264"
               height="260"
             />
-            <h4>Camila Garcia</h4>
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -114,7 +108,7 @@
               width="264"
               height="260"
             />
-            <h4>Daniel Wilson</h4>
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -128,7 +122,7 @@
           alt="logo"
           width="115"
           height="24"
-        />
+        />WebStudio
       </a>
       <p>
         Increase the flow of customers and sales for your business with digital
