--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
       <a href="./index.html"
         ><img
           src="./images/icons/logo.png"
-          alt="logo"
+          alt="WebStudio"
           width="115"
           height="24"
-        />WebStudio
+        />
       </a>
       <p>
         Increase the flow of customers and sales for your business with digital
