--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <!-- Navigate -->
     <header>
-      <img src="./images/icons/logo.png" alt="logo" width="115" height="24" />
-
       <nav>
+        <a href="./index.html">WebStudio</a>
+
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -21,7 +21,7 @@
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -116,14 +116,7 @@
     </main>
     <!-- tooter -->
     <footer>
-      <a href="./index.html"
-        ><img
-          src="./images/icons/logo.png"
-          alt="WebStudio"
-          width="115"
-          height="24"
-        />
-      </a>
+      <a href="./index.html">WebStudio </a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
